--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
-	<div class="box box-1" style="--img: url(https://static.wikia.nocookie.net/leagueoflegends/images/5/59/37b297265bb4cf77.png/revision/latest?cb=20180730031316&path-prefix=pt-br);" data-text="Micky"></div>
+	<div class="box box-1" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/ornn-classic.jpg);" data-text="Micky"></div>
 	<div class="box box-2" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/nocturne-classic.jpg);" data-text="Kaotiko"></div>
 	<div class="box box-3" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/syndra-classic.jpg);" data-text="Stewetb"></div>
 	<div class="box box-4" style="--img: url(https://liquipedia.net/commons/images/e/e8/League_Infobox_Smolder.jpg);" data-text="Alpi"></div>
