--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="box box-1" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/ornn-classic.jpg);" data-text="Micky"></div>
 	<div class="box box-2" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/nocturne-classic.jpg);" data-text="Kaotiko"></div>
 	<div class="box box-3" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/syndra-classic.jpg);" data-text="Stewetb"></div>
-	<div class="box box-4" style="--img: url(https://liquipedia.net/commons/images/e/e8/League_Infobox_Smolder.jpg);" data-text="Alpi"></div>
+	<div class="box box-4" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/jinx-classic.jpg);" data-text="Alpi"></div>
 	<div class="box box-5" style="--img: url(https://www.mobafire.com/images/champion/skins/portrait/rakan-classic.jpg);" data-text="Loloki"></div>
 </div>
 <!-- partial -->
